--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <gson.version>2.9.0</gson.version>
         <commons.version>3.12.0</commons.version>
         <fastjson.version>1.2.80</fastjson.version>
+        <jackson.version>2.8.7</jackson.version>
     </properties>
 
 
@@ -59,7 +60,11 @@
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
     </dependencies>
 
 
