--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <guava.version>31.1-jre</guava.version>
-        <hutool.version>5.8.0.M3</hutool.version>
+        <hutool.version>5.8.4</hutool.version>
         <httpclient.version>4.5.13</httpclient.version>
         <gson.version>2.9.0</gson.version>
         <commons.version>3.12.0</commons.version>
