--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.cruder</groupId>
     <artifactId>common-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.2022080821</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,7 +18,7 @@
         <httpclient.version>4.5.13</httpclient.version>
         <gson.version>2.9.0</gson.version>
         <commons.version>3.12.0</commons.version>
-        <fastjson2.version>2.0.7</fastjson2.version>
+        <fastjson2.version>2.0.10</fastjson2.version>
         <jackson.version>2.13.3</jackson.version>
     </properties>
 
