--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.cruder</groupId>
     <artifactId>common-tools</artifactId>
-    <version>1.1.2022082014</version>
+    <version>1.1.20230216-21</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -14,12 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <guava.version>31.1-jre</guava.version>
-        <hutool.version>5.8.5</hutool.version>
+        <hutool.version>5.8.11</hutool.version>
         <httpclient.version>4.5.13</httpclient.version>
         <gson.version>2.9.0</gson.version>
         <commons.version>3.12.0</commons.version>
         <fastjson2.version>2.0.10</fastjson2.version>
         <jackson.version>2.13.3</jackson.version>
+        <vavr.version>0.10.4</vavr.version>
     </properties>
 
 
@@ -54,17 +55,20 @@
             <artifactId>fastjson2</artifactId>
             <version>${fastjson2.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>${vavr.version}</version>
+        </dependency>
+
     </dependencies>
 
 
