--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.cruder</groupId>
     <artifactId>common-tools</artifactId>
-    <version>1.1.20230217-10</version>
+    <version>1.1.20230405-14</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,6 +21,7 @@
         <fastjson2.version>2.0.10</fastjson2.version>
         <jackson.version>2.13.3</jackson.version>
         <vavr.version>0.10.4</vavr.version>
+        <jsonpath.version>2.8.0</jsonpath.version>
     </properties>
 
 
@@ -69,6 +70,11 @@
             <version>${vavr.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${jsonpath.version}</version>
+        </dependency>
     </dependencies>
 
 
